@@ -1,3 +1,10 @@
+2012-11-24  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Added adapter class for increased pluggability. Added
+	hook for 3rd party invitation system to by pass e-mail
+	verification (`stash_email_verified`). Moved sending of mail to
+	adapter.
+
 2012-10-23  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* account: Added option to completely disable e-mail verification
